# wce-devops

./: LICENSE  README.md  mock-assignment.md
.devcontainer/: Dockerfile
doc/: README.md  cmake-templates.md  contribution-styleguide.md  quickstart.md  template.md  templates.md
generic-c-template/: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
generic-c-template/.devcontainer/: Dockerfile  devcontainer.json
generic-c-template/lib/: CMakeLists.txt
generic-c-template/lib/rktest/: CMakeLists.txt
generic-c-template/src/: example_compilation_unit.c  main.c  vector.c  vector.h
generic-c-template/tests/: example_compilation_unit_tests.c  tests.c
java-template/: README.md  build.sh  pom.xml  run.sh
java-template/.devcontainer/: Dockerfile  devcontainer.json
java-template/src/main/java/app/: App.java
java-template/src/test/java/app/: AppTest.java
systems-template/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
systems-template/.devcontainer/: devcontainer.json
systems-template/src/: example_compilation_unit.c  example_compilation_unit.h
systems-template/test/: rktest.c
